fix tap here positioning, edit final level score overlay statement to better fit on mobile, removed potential buggy area on question stage

--- a/RTZ/css/game.css
+++ b/RTZ/css/game.css
@@ -153,6 +153,10 @@
     position: absolute;
 }
 
+.contentactual p {
+    width: initial;
+}
+
 .unselectable {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
